--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    include(modImplementation("me.lucko:fabric-permissions-api:0.3-SNAPSHOT"))
+    include(modImplementation("me.lucko:fabric-permissions-api:${project.permissions_api_version}"))
 }
 
 processResources {
