--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 minecraft_version=1.20.4
 yarn_mappings=1.20.4+build.3
-loader_version=0.15.6
+loader_version=0.15.7
 
 # Mod Properties
 mod_version = 0.1.0-1.20.4
@@ -12,4 +12,5 @@ maven_group = xyz.eclipseisoffline
 archives_base_name = customname
 
 # Dependencies
-fabric_version=0.96.0+1.20.4
+fabric_version=0.96.11+1.20.4
+permissions_api_version=0.3-SNAPSHOT
