--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.7
+minecraft_version=1.20.5-pre1
+yarn_mappings=1.20.5-pre1+build.5
+loader_version=0.15.9
 
 # Mod Properties
-mod_version = 0.2.1-1.20.4
+mod_version = 0.2.1-1.20.5
 maven_group = xyz.eclipseisoffline
 archives_base_name = customname
 
 # Dependencies
-fabric_version=0.96.11+1.20.4
+fabric_version=0.96.15+1.20.5
 permissions_api_version=0.3-SNAPSHOT
