--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ archives_base_name = customname
 # Dependencies
 fabric_version=0.92.0+1.20.1
 permissions_api_version=0.3-SNAPSHOT
+luckperms_api_version=5.4
