--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.20.5-pre1
-yarn_mappings=1.20.5-pre1+build.5
-loader_version=0.15.9
+minecraft_version=1.20.5-rc2
+yarn_mappings=1.20.5-rc2+build.1
+loader_version=0.15.10
 
 # Mod Properties
 mod_version = 0.2.2-1.20.5
@@ -12,6 +12,6 @@ maven_group = xyz.eclipseisoffline
 archives_base_name = customname
 
 # Dependencies
-fabric_version=0.96.15+1.20.5
-permissions_api_version=0.3-SNAPSHOT
+fabric_version=0.97.3+1.20.5
+permissions_api_version=0.2-SNAPSHOT
 luckperms_api_version=5.4
