Update to 1.20.5 and update README

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.20.5-rc2
-yarn_mappings=1.20.5-rc2+build.1
+minecraft_version=1.20.5
+yarn_mappings=1.20.5+build.1
 loader_version=0.15.10
 
 # Mod Properties
@@ -12,6 +12,6 @@ maven_group = xyz.eclipseisoffline
 archives_base_name = customname
 
 # Dependencies
-fabric_version=0.97.3+1.20.5
+fabric_version=0.97.5+1.20.5
 permissions_api_version=0.2-SNAPSHOT
 luckperms_api_version=5.4
