--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.20.5
-yarn_mappings=1.20.5+build.1
+minecraft_version=1.20.6
+yarn_mappings=1.20.6+build.1
 loader_version=0.15.10
 
 # Mod Properties
-mod_version = 0.2.2-1.20.5
-maven_group = xyz.eclipseisoffline
-archives_base_name = customname
+mod_version=0.2.2-1.20.5+6
+supported_versions=>=1.20.5 <=1.20.6
+maven_group=xyz.eclipseisoffline
+archives_base_name=customname
 
 # Dependencies
-fabric_version=0.97.5+1.20.5
-permissions_api_version=0.2-SNAPSHOT
+fabric_version=0.97.8+1.20.6
+permissions_api_version=0.3.1
 luckperms_api_version=5.4
