--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.2
 loader_version=0.15.10
 
 # Mod Properties
-mod_version = 0.2.2-1.20.1
-maven_group = xyz.eclipseisoffline
-archives_base_name = customname
+mod_version=0.2.2-1.19.4
+supported_versions=1.19.4
+maven_group=xyz.eclipseisoffline
+archives_base_name=customname
 
 # Dependencies
-fabric_version=0.92.1+1.20.1
+fabric_version=0.87.2+1.19.4
 permissions_api_version=0.2-SNAPSHOT
 luckperms_api_version=5.4
