--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21
-yarn_mappings=1.21+build.1
-loader_version=0.15.11
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.3
+loader_version=0.16.3
 
 # Mod Properties
-mod_version=0.2.4-1.21
-supported_versions=1.21
+mod_version=0.2.5-1.21.1
+supported_versions=>=1.21 <=1.21.1
 maven_group=xyz.eclipseisoffline
 archives_base_name=customname
 
 # Dependencies
-fabric_version=0.100.1+1.21
+fabric_version=0.103.0+1.21.1
 permissions_api_version=0.3.1
 luckperms_api_version=5.4
