--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
-loader_version=0.16.3
+minecraft_version=1.21.2-pre1
+yarn_mappings=1.21.2-pre1+build.2
+loader_version=0.16.5
 
 # Mod Properties
-mod_version=0.2.5-1.21.1
-supported_versions=>=1.21 <=1.21.1
+mod_version=0.2.6-1.21.2
+supported_versions=1.21.2-beta.1
 maven_group=xyz.eclipseisoffline
 archives_base_name=customname
 
 # Dependencies
-fabric_version=0.103.0+1.21.1
+fabric_version=0.105.3+1.21.2
 permissions_api_version=0.3.1
 luckperms_api_version=5.4
