--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ yarn_mappings=1.21.2-pre1+build.2
 loader_version=0.16.5
 
 # Mod Properties
-mod_version=0.2.6-1.21.2
+mod_version=0.2.6-1.21.2-pre1
 supported_versions=1.21.2-beta.1
 maven_group=xyz.eclipseisoffline
 archives_base_name=customname
