--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.2
-yarn_mappings=1.21.2+build.1
+minecraft_version=1.21.3
+yarn_mappings=1.21.3+build.1
 loader_version=0.16.7
 
 # Mod Properties
-mod_version=0.2.6-1.21.2
-supported_versions=1.21.2
+mod_version=0.2.6-1.21.3
+supported_versions=>=1.21.2 <=1.21.3
 maven_group=xyz.eclipseisoffline
 archives_base_name=customname
 
 # Dependencies
-fabric_version=0.106.1+1.21.2
+fabric_version=0.106.1+1.21.3
 permissions_api_version=0.3.1
 luckperms_api_version=5.4
