--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.3
-yarn_mappings=1.21.3+build.1
-loader_version=0.16.7
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.1
+loader_version=0.16.9
 
 # Mod Properties
-mod_version=0.2.7-1.21.3
-supported_versions=>=1.21.2 <=1.21.3
+mod_version=0.2.8-1.21.4
+supported_versions=1.21.4
 maven_group=xyz.eclipseisoffline
 archives_base_name=customname
 
 # Dependencies
-fabric_version=0.106.1+1.21.3
+fabric_version=0.111.0+1.21.4
 permissions_api_version=0.3.3
 luckperms_api_version=5.4
