--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,7 @@ archives_base_name=customname
 fabric_version=0.103.0+1.21.1
 permissions_api_version=0.3.1
 luckperms_api_version=5.4
+
+# Publishing
+release_type=STABLE
+release_minecraft_versions=1.21,1.21.1
