--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,21 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.1
-loader_version=0.16.9
+minecraft_version=1.21.5
+yarn_mappings=1.21.5+build.1
+loader_version=0.16.10
 
 # Mod Properties
-mod_version=0.2.9-1.21.4
-supported_versions=1.21.4
+mod_version=0.3.0-1.21.5
+supported_versions=1.21.5
 maven_group=xyz.eclipseisoffline
 archives_base_name=customname
 
 # Dependencies
-fabric_version=0.111.0+1.21.4
+fabric_version=0.119.5+1.21.5
 permissions_api_version=0.3.3
 luckperms_api_version=5.4
+
+# Publishing
+release_type=STABLE
+release_minecraft_versions=1.21.5
