--- a/gradle.properties
+++ b/gradle.properties
@@ -2,21 +2,21 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.10
+minecraft_version=1.21.6
+yarn_mappings=1.21.6+build.1
+loader_version=0.16.14
 
 # Mod Properties
-mod_version=0.3.1-1.21.5
-supported_versions=1.21.5
+mod_version=0.3.1-1.21.6
+supported_versions=1.21.6
 maven_group=xyz.eclipseisoffline
 archives_base_name=customname
 
 # Dependencies
-fabric_version=0.119.5+1.21.5
-permissions_api_version=0.3.3
+fabric_version=0.127.1+1.21.6
+permissions_api_version=0.4.0-SNAPSHOT
 luckperms_api_version=5.4
 
 # Publishing
 release_type=STABLE
-release_minecraft_versions=1.21.5
+release_minecraft_versions=1.21.6
